fixed hamburger on mobile and added hidden attribute instead of .hide

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -314,5 +314,3 @@ h3
         border-radius: 3px
         background: $orange
         margin-bottom: 8px
-.hide
-    display: none
